--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodejs-predictive",
-  "author": "Alex Chritian",
+  "name": "app-socketio",
+  "author": "Alex Christian",
   "git": "git@gitlab.com:devsecuritec/nodejs-predictive.git",
   "version": "1.1.0",
   "main": "app.js",
@@ -16,6 +16,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "nodemon": "^1.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0"
